<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cancel_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_cancel_24"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@android:color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/agree_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_message"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_mark"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/agree_statement"
        android:textSize="30sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/agree_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_btn"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        android:layout_below="@+id/agree_statement"
        android:background="@drawable/yes_btn"
        android:layout_margin="20sp"/>
</RelativeLayout>