<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/project_submission_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:minHeight="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/return_to_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:padding="8dp"
                android:background="@android:color/black"/>

            <ImageView
                android:id="@+id/image_for_gads"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/gads"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_for_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginBottom="20dp"
        app:tabTextColor="@color/submit_project_color"
        app:tabGravity="center"
        app:tabRippleColor="@color/submit_project_color"
        app:tabPadding="8dp"
        app:tabMode="fixed"
        android:minHeight="?attr/actionBarSize">
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/first_name"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/round_edit"
            android:layout_height="50dp"
            android:hint="@string/enter_first_name"
            android:inputType="text"/>

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/round_edit"
            android:hint="@string/enter_last_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_edit"
            android:hint="@string/enter_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/github_"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_edit"
            android:hint="@string/enter_github_link"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/project_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:text="@string/project_submit"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@drawable/project_submit_button"/>
    </LinearLayout>

</LinearLayout>